# CumulusCI_AzureDevOps

./: .pre-commit-config.yaml  INSTALLATION.md  LICENSE  Makefile  README.md  check_deps.py  install.py  pyproject.toml  upgrade.py
.github/workflows/: feature_test.yml  release.yml  release_test.yml
cumulusci_ado/: __about__.py  __init__.py  azure_devops.py  cumulusci_plugin.yml
cumulusci_ado/cli/: __init__.py  ado.py
cumulusci_ado/utils/: ado.py
cumulusci_ado/utils/common/: artifacttool.py  artifacttool_updater.py  external_tool.py
cumulusci_ado/utils/common/client_tool/: client_tool_client.py
cumulusci_ado/utils/common/client_tool/models/: __init__.py  client_tool_release.py
cumulusci_ado/utils/common/tests/: test_artifacttool_updater.py
cumulusci_ado/utils/tests/: test_ado.py
cumulusci_ado/vcs/ado/: __init__.py  adapter.py  exceptions.py  service.py
cumulusci_ado/vcs/ado/dependencies/: __init__.py  ado_dependencies.py  ado_resolvers.py  azure_devops.py  azure_devops_resolvers.py
cumulusci_ado/vcs/ado/generator/: __init__.py
cumulusci_ado/vcs/ado/source/: azure_devops.py
cumulusci_ado/vcs/ado/tests/: test_adapter.py  test_service.py
tests/: test_plugin.py  test_plugin_simple.py  test_version.py
