[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cumulusci-azure-devops"
dynamic = ["version", "readme"]
description = "A plugin for cumulusci supporting Azure DevOps"
license = { text = "BSD 3-Clause License" }
authors = [{name = "Rupesh J"}]
requires-python = ">=3.11"
dependencies = [
    "cumulusci>=4.3.0.dev0",
    "azure-devops",
    "requests",
    "humanfriendly",
    "distro"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[project.urls]
Homepage = "https://github.com/your-org/CumulusCI_AzureDevOps"
"Bug Tracker" = "https://github.com/your-org/CumulusCI_AzureDevOps/issues"

[project.entry-points."cumulusci.plugins"]
azure_devops = "cumulusci_ado.azure_devops:AzureDevOpsPlugin"

[tool.hatch.version]
path = "cumulusci_ado/__about__.py"

[tool.hatch.build]
include = [
    "/cumulusci_ado",
    "/cumulusci_ado/**/*.*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/cumulusci_ado",
    "README.md",
]

[tool.hatch.build.targets.wheel]
exclude = ["*.sql", "*.zip"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.pyright]
reportMissingImports = "none"
typeCheckingMode = "basic"
exclude = ["**/test_*", "**/tests/**"]
include = ["**/*.py"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "factory-boy",
    "responses"
]
docs = [
    "sphinx",
    "myst-parser"
]
lint = [
    "black",
    "flake8",
    "isort",
    "pre-commit"
]